fixed configs and updated notebook

--- a/configs/trip_planner.cfg
+++ b/configs/trip_planner.cfg
@@ -1,7 +1,7 @@
 # Configuration for TripPlanner
 
 [DEFAULT]
-output_file = data/tts_sumo/test_tts_trips.xml
+output_file = data/tts_sumo/tts_trips.xml
 
 [hway_inflow]
     # Inflow nodes for the AOI highways
@@ -23,9 +23,9 @@ output_file = data/tts_sumo/test_tts_trips.xml
 
 [trip]
     # Default start_time should be 345 = 3:45 AM
-    start_time = 1530
+    start_time = 345
     # Default end_time is -1 = maximum possible trip time
-    end_time = 1830
+    end_time = -1
     min_intersection = 0.05
     max_node_distance = 2000
     num_close_nodes = 5
