implemented smaller scenario, dynamic trip generation, readme updates

--- a/configs/traffic_regions.cfg
+++ b/configs/traffic_regions.cfg
@@ -7,3 +7,7 @@ taz_shape_path = data/tts_data/tts_traffic_zones/tts06_83_region.shp
 pd_shape_path = data/tts_data/tts_planning_districts/tts06_pd_83.shp
 # Ontario Road Network Shapefile
 orn_path = data/ontario_road_network/Ontario_Road_Network__ORN__Segment_With_Address.shp
+
+[extra_roads]
+    arteries = 
+        LAKE SHORE BOULEVARD
