--- a/configs/trip_planner.cfg
+++ b/configs/trip_planner.cfg
@@ -1,17 +1,23 @@
 # Configuration for TripPlanner
 
 [DEFAULT]
-output_file = data/tts_sumo/tts_trips.xml
+output_file = data/tts_sumo/test_tts_trips_1600_1800.xml
+net_path = data/tts_sumo/updated.net.xml
+
 
 [hway_inflow]
     # Inflow nodes for the AOI highways
     DON VALLEY PARKWAY = 2056766634 
     F G GARDINER EXPRESSWAY = 2146559826
+    LAKE SHORE BOULEVARD WEST = 2146559826
+    LAKE SHORE BOULEVARD EAST = 2056766634
 
 [hway_outflow]
     # Outflow nodes for the AOI highways
     DON VALLEY PARKWAY = 2056766643
     F G GARDINER EXPRESSWAY = 2146559836
+    LAKE SHORE BOULEVARD WEST = 2146559836
+    LAKE SHORE BOULEVARD EAST = 2056766643
 
 [travel_speed]
     # speeds are in km/h
@@ -23,11 +29,11 @@ output_file = data/tts_sumo/tts_trips.xml
 
 [trip]
     # Default start_time should be 345 = 3:45 AM
-    start_time = 345
+    start_time = 1600
     # Default end_time is -1 = maximum possible trip time
-    end_time = -1
+    end_time = 1800
     min_intersection = 0.05
     max_node_distance = 2000
     num_close_nodes = 5
     trivial_path_length = 3
-    
+    max_sample_size = 50
