--- a/configs/tts_data.cfg
+++ b/configs/tts_data.cfg
@@ -1,8 +1,9 @@
 # Configuration for transit trip survey data
 
 [DEFAULT]
-time_interval = 5
-filter_width = 7
+data_time_interval = 5
+desired_time_interval = 60
+filter_width = 13
 tts_path = data/tts_data/tts_cartrips.txt
 savedir = data/tts_data
 # each interval is 5 mins so the filter accounts for 15 mins before/after a time
